添加CSS动画面试题

--- a/面试题/高频考点.md
+++ b/面试题/高频考点.md
@@ -21,7 +21,7 @@
 
 ![img](https://img-blog.csdnimg.cn/img_convert/4cf5cf49f70dad69bbfde1f1311af582.png)
 
-（4）我们通过DNS解析获取到IP地址后， 需要发起TCP连接请求。 TCP 建立连接需要经历三次握手的过程，首先客户端向服务器发送一个 **SYN 连接请求报文段**和一个随机序号，服务端接收到请求后向客户端发送一个 **SYN ACK报文段**和一个随机序号，确认连接请求。客户端接收服务器的确认应答后，进入连接建立的状态，同时向服务器也发送一个 **ACK 确认报文段**，服务器端接收到确认后，也进入连接建立状态，此时双方的连接就建立起来了。
+（4）我们通过DNS解析获取到IP地址后， 需要发起TCP连接请求。 TCP 建立连接需要经历三次握手的过程，首先客户端向服务器发送一个 **SYN 连接请求报文段**和一个随机序号，服务端接收到请求后向客户端发送一个 **SYN ACK报文段**和一个随机序号并且ACK序列号为客户端序列号+1，确认连接请求。客户端接收服务器的确认应答后，进入连接建立的状态，同时向服务器也发送一个 **ACK 确认报文段**，服务器端接收到确认后，也进入连接建立状态，此时双方的连接就建立起来了。
 
 ```
 在TCP报文的报头中，有几个标志字段：
@@ -36,7 +36,7 @@
 
 （5）握手成功后， 浏览器就可以向服务器发送**http**请求了。 **发送HTTP请求的过程就是构建HTTP请求报文并通过TCP协议发送到服务器指定端口(HTTP协议80/8080, HTTPS协议443)**。HTTP请求报文是由三部分组成: 请求行,请求报头和请求正文。
 
-（6）在服务端会监听浏览器端发送的http请求，当浏览器的请求发出后，服务端就会接受该请求，并对相应的信息进行处理，将处理的结果响应给浏览器端。浏览器接收到响应后，开始对 html 文件进行解析，开始页面的渲染过程。
+（6）服务器端会监听浏览器端发送的http请求，当浏览器的请求发出后，服务端就会接受该请求，并对相应的信息进行处理，将处理的结果响应给浏览器端。浏览器接收到响应后，开始对 html 文件进行解析，开始页面的渲染过程。
 
 （7）浏览器首先会根据 html 文件构建 DOM 树，根据解析到的 css 文件构建 CSSOM 树。当 DOM 树和 CSSOM 树建立好后，根据它们来构建渲染树。渲染树构建好后，会根据渲染树来进行布局，计算每个节点的几何位置。布局完成后，进入绘制阶段，将各个节点绘制到屏幕上。这个时候整个页面就显示出来了。
 
@@ -45,9 +45,9 @@
 4次挥手大体的过程如下：
 
 1. 客户端向服务器发送一个**FIN连接释放报文段**和一个随机序号，通知服务器现在需要断开（第一次挥手）
-2. 服务器接到要断开的请求之后，向客户端发送一个**ACK确认报文段**和一个随机序号，服务端进入CLOSE_WAIT（关闭等待）状态（第二次挥手）
+2. 服务器接到要断开的请求之后，向客户端发送一个**ACK确认报文段**和一个随机序号，服务端进入**CLOSE_WAIT**（关闭等待）状态（第二次挥手）
 3. 如果服务端也想断开连接了，向客户端发送一个**FIN连接释放报文段**和一个随机序号（第三次挥手）
-4. 客户端接收到服务器消息后，向服务器端发送一个**ACK确认报文段**和一个随机序号，服务器收到消息后，就处于关闭连接了，处于 `CLOSED` 状态（第四次挥手）
+4. 客户端接收到服务器消息后，向服务器端发送一个**ACK确认报文段**和一个随机序号，服务器收到消息后，就处于关闭连接了，处于 **CLOSED** 状态（第四次挥手）
 
 ![image.png](https://img-blog.csdnimg.cn/img_convert/ae67d93bd25c900cb90fda95d2c443fa.png)
 
@@ -85,7 +85,7 @@ Q:为什么需要三次握手，两次不行吗？
 
 
 Q:挥手为什么要4次？
-关闭连接时，当服务端收到FIN报文时，很可能并不会立即关闭SOCKET，所以只能先回复一个ACK报文，告诉客户端，"你发的FIN报文我收到了"。只有等到我服务端所有的报文都发送完了，我才能发送FIN报文，因此不能一起发送。故需要四次挥手。
+关闭连接时，当服务端收到FIN报文时，可能并不会立即关闭，所以只能先回复一个ACK报文，告诉客户端，"你发的FIN报文我收到了"。只有等到我服务端所有的报文都发送完了，我才能发送FIN报文，因此ACK和FIN不能一起发送。故需要四次挥手。
 ```
 
 ### 2.CSS为什么要清除浮动？如何清除浮动？
@@ -156,7 +156,11 @@ BFC （Block Formatting Context） 是**块级格式化上下文**，是**Web页
 
 1. 清除浮动，给父元素添加overflow:hidden。因为计算BFC的高度时，浮动元素也参与计算。
 2. 用于两栏自适应布局
-3. 防止垂直margin合并
+3. 防止垂直margin合并。因为BFC就是页面上的一个隔离的独立容器，容器里面的子元素不会影响到外面的元素，外面的也不会影响里面的。如果元素之间是兄弟元素关系，将元素的渲染规则改为BFC。如果是父子元素关系，将父元素的渲染模式改为BFC渲染模式。
+
+```
+平方向上的margin累加,而兄弟结构垂直方向上的margin是合并的
+```
 
 ### 4.如何实现水平居中
 
@@ -231,3 +235,190 @@ BFC （Block Formatting Context） 是**块级格式化上下文**，是**Web页
 **方案二：**使用flex布局实现
 
 设置父元素为flex定位，**justify-content: center; align-items: center;**
+
+**K**
+
+### 7.介绍一下css盒模型
+
+```
+1.盒模型的种类。盒模型的组成部分。
+2.两种盒模型的区别
+3.box-sizing属性
+```
+
+css盒模型分为**IE盒模型**和**W3C标准盒模型**。盒模型都是由四个部分组成的，分别是content、padding、margin和border。
+
+标准盒模型和IE盒模型的区别在于设置width和height时，包含内容不同。标准盒模型的width和height属性只包含了content，而IE盒模型的width和height属性包含了border、padding和content。
+
+在ie8+浏览器中，我们可以通过修改元素的box-sizing属性来改变元素的盒模型。
+
+默认值为content-box，即标准盒模型；如果将box-sizing设为border-box则用的是IE盒模型。
+
+### 8.布局方法有哪些，flex，grid，还有吗？
+
+布局方法还是比较多的，比如说
+
+**标准流布局** 浏览器默认的HTML布局方式，就是按照文档的顺序一个一个显示出来，块元素独占一行，行内元素共享一行
+
+**浮动布局** 使用 float 属性，使元素脱离文档流，浮动起来，使用浮动进行布局。
+
+**定位布局** 通过 position 属性来进行定位，利用绝对定位、相对定位、固定定位等特性进行布局。
+
+**使用display布局** 在css中实现页面布局的主要方法是设定display属性的值，更改元素的默认显示方式。 比如说，将从block元素转换为inline等等，更重要的是可以通过设置flex 或 grid 进行布局：
+
+**flex布局** 通过容器和轴进行布局设置。其中，采用Flex布局的元素称为容器，其所有子元素称为项目。轴分为主轴和交叉轴。flex布局可以很方便的排列子元素位置，只需要设置justify-content 和 align-items即可。
+
+**grid 网格布局**：可以实现二维布局方式。其中，采用Grid布局的元素称为网格容器，网格容器的直接子元素称为网格项，grid兼容性目前还可以。
+
+**多列布局** : 一种把内容按列排序的布局方式，就像文本在报纸上排列那样。使用 column-count属性设置需要多少列。
+
+### 9.css绝对定位和相对定位都是以谁为基准？
+
+**知识点**
+
+定位position的属性值有：
+
+- `Static `，**静态定位**是每个元素**默认**的属性，它表示“将元素放在文档标准流的默认位置。
+- `Relative` **相对定位**以元素的原位置为基准，偏移位置。**相对定位并没有脱标**
+- **`Absolute` 绝对定位**相对于最近的已定位的祖先元素移动。**脱离文档流**。
+- **`Fixed`固定定位**，与绝对定位非常类似，但是它是将一个元素**相对浏览器视口固定**。 这在创建类似在整个页面滚动过程中总是处于屏幕的某个位置的导航菜单时非常有用。
+- **`Sticky` 粘性定位**，它会让元素**先保持和position: static**一样的定位，当它的相对视口位置(offset from the viewport)达到某一个预设值时，他就会**再像position: fixed**一样定位（某些网站头导航栏滚动到一定位置固定到屏幕）。
+
+**回答**
+
+- **absolute** 绝对定位 相对于最近的已定位的祖先元素, （有已定位指position不是static的元素祖先元素）如果无已定位祖先元素, 以body元素为基准偏移**, 完全脱离了标准文档流**。
+- **relative**：相对定位元素的定位是相对其正常位置。**不脱标，且设置偏移量也不会影响其他元素的位置。**
+
+### 10.浮动布局和flex布局相比有什么优缺点？
+
+`flex`：优点在于其容易上手，flex布局可以很方便的排列子元素位置
+
+缺点是：浏览器兼容性比较差，只能兼容到ie9及以上。
+
+`浮动`：浮动布局的优点就是比较简单，兼容性也比较好。
+
+缺点：因为浮动元素是脱离文档流，要做清除浮动，这个处理不好的话，会带来很多问题，比如高度塌陷等。
+
+### 11.CSS 选择符有哪些？
+
+```
+（1）通配符选择器（*）
+（2）id选择器（#myid）
+（3）类选择器（.myclassname）
+（4）标签选择器（div,h1,p）
+（5）后代选择器（h1 p）
+（6）子代选择器（ul>li）
+（7）相邻兄弟选择器（li+a）//选择出紧挨着li的a标签
+（8）后兄弟元素选择器（p~a)//查找指定元素的后面的所有兄弟结点。
+（9）属性选择器（a[rel="external"]）
+（10）伪类选择器（a:hover,li:nth-child）
+（11）伪元素选择器（::before、::after）
+```
+
+元素权重：（可叠加）强制优先级 !important 让某个规则强制有效
+
+![img](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/ce4cb9f4fa9f439cb1422b46d7fcb590~tplv-k3u1fbpfcp-zoom-1.image)
+
+### 12.css中隐藏元素的方法，display:none, visibility:hidden区别？还有什么方式
+
+css中隐藏元素的方法有
+
+1.`visibility:hidden`
+
+2.`display:none`
+
+3.`z-index=-1`设置元素的叠加顺序-1
+
+4.`opacity：0`透明度为0
+
+**visibility:hidden**，该元素隐藏起来了，但不会改变页面布局，不会触发该元素绑定的事件 。
+
+**display:none**， 把元素隐藏起来，并会改变页面布局。
+
+**z-index=-1**可以理解成元素置于其他元素下面，被挡住了
+
+**opacity：0**该元素隐藏起来了，但不会改变页面布局，并且，如果该元素已经绑定了一些事件，如click事件也能触发
+
+### 13.实现一个块从左到右的移动
+
+```css
+<style>
+    div {
+        width: 100px;
+        height: 100px;
+        background: red;
+    }
+
+    div:hover {
+        transition: 2s;
+        transform: translate(100px, 100px);
+    }
+</style>
+```
+
+**L**
+
+### 14.CSS和JS实现动画的方式
+
+**JS实现动画的方式**：setInterval，setTimeout
+
+它的主要思想是通过setInterval或setTimeout方法的回调函数来持续调用改变某个元素的CSS样式以达到元素样式变化的效果。
+
+**CSS实现动画**
+
+1.css3的`transition`--设置样式的属性值是如何从一种状态过渡到另外一种状态
+
+2.css3的`transform`--应用于元素的2D或3D转换，可以用来设置元素的形状改变，如：rotate（旋转）、scale（缩放）、translate（移动）。 通常transform变化 和 transition过渡 是组合使用的 
+
+ 3.css3的`animation`（animation属性+@keyframes）--由属性keyframes来完成逐帧动画的。通过对关键帧和循环次数的控制，页面标签元素会根据设定好的样式改变进行平滑过渡。而且关键帧状态的控制是通过百分比来控制的。
+
+```css
+<style>
+    div {
+        width: 100px;
+        height: 100px;
+        background: red;
+        position: relative;
+        animation: myfirst 5s;
+        -moz-animation: myfirst 5s;
+        /* Firefox */
+        -webkit-animation: myfirst 5s;
+        /* Safari and Chrome */
+        -o-animation: myfirst 5s;
+        /* Opera */
+    }
+
+    @keyframes myfirst {
+        0% {
+            background: red;
+            left: 0px;
+            top: 0px;
+        }
+
+        25% {
+            background: yellow;
+            left: 200px;
+            top: 0px;
+        }
+
+        50% {
+            background: blue;
+            left: 200px;
+            top: 200px;
+        }
+
+        75% {
+            background: green;
+            left: 0px;
+            top: 200px;
+        }
+
+        100% {
+            background: red;
+            left: 0px;
+            top: 0px;
+        }
+    }
+</style>
+```
+
