添加高频考点

--- a/面试题/高频考点.md
+++ b/面试题/高频考点.md
@@ -370,7 +370,7 @@ css中隐藏元素的方法有
 
 2.css3的`transform`--应用于元素的2D或3D转换，可以用来设置元素的形状改变，如：rotate（旋转）、scale（缩放）、translate（移动）。 通常transform变化 和 transition过渡 是组合使用的 
 
- 3.css3的`animation`（animation属性+@keyframes）--由属性keyframes来完成逐帧动画的。通过对关键帧和循环次数的控制，页面标签元素会根据设定好的样式改变进行平滑过渡。而且关键帧状态的控制是通过百分比来控制的。
+ 3.css3的`animation`（animation属性+@keyframes）--由属性keyframes来完成逐帧动画的，keyframes通过百分比来控制关键帧，页面标签元素会根据设定好的样式改变进行平滑过渡。
 
 ```css
 <style>
@@ -422,3 +422,4 @@ css中隐藏元素的方法有
 </style>
 ```
 
+### 15.什么是闭包?
