添加JS高频题

--- a/面试题/高频考点.md
+++ b/面试题/高频考点.md
@@ -422,4 +422,241 @@ css中隐藏元素的方法有
 </style>
 ```
 
-### 15.什么是闭包?
+### 15.JavaScript 什么是闭包?
+
+闭包是指有权访问另一个函数作用域中变量的函数，创建闭包的最常见的方式就是在一个函数内创建另一个函数，创建的函数可以访问到当前函数的局部变量。
+闭包有两个常用的用途。
+1.使我们在函数外部能够访问到函数内部的变量。通过使用闭包，我们可以通过在外部调用闭包函数，从而在外部访问到函数内部的变量，可以使用这种方法来创建私有变量。
+
+2.使已经运行结束的函数上下文中的变量对象继续留在内存中，因为闭包函数保留了这个变量对象的引用，所以
+这个变量对象不会被回收。
+
+其实闭包的本质就是作用域链的一个特殊的应用，只要了解了作用域链的创建过程，就能够理解闭包的实现原理。
+
+ **优点：**
+
+1.变量长期驻扎在内存中
+
+2.防止变量污染全局
+
+```js
+// 现在你和同事开发同一个模块，然后你发现你们变量名大部分相同，为了管理变量，防止污染全局,可以闭包来解决这个问题
+// 开发规范：init代表着入口、初始化的意思
+let name = 'XYZ';
+let init = (function () {
+    let name = 'LM';
+
+    function callName() {
+        console.log(name);
+    }
+
+    return function () {
+        callName();
+    }
+}());
+let initXie = (function () {
+    let name = '同事开发部分';
+
+    function callName() {
+        console.log(name);
+    }
+
+    return function () {
+        callName();
+    }
+}());
+init();
+initXie();
+```
+
+**缺点：**
+
+物极必反，函数中的变量都被保存在内存中，内存消耗很大，所以不能滥用闭包，否则会造成网页的性能问题。解决方法是在退出函数之前，将不使用的局部变量全部删除
+
+### 16.Javascript 的作用域链？
+
+作用域链的作用是保证对执行环境有权访问的所有变量和函数的有序访问，通过作用域链，我们可以访问到外层环境的变量和函数。
+
+作用域链的本质上是一个指向变量对象的指针列表。变量对象是一个包含了执行环境中所有变量和函数的对象。作用域链的前端始终都是当前执行上下文的变量对象。全局执行上下文的变量对象（也就是全局对象）始终是作用域链的最后一个对象。
+
+当我们查找一个变量时，如果当前执行环境中没有找到，我们可以沿着作用域链向后查找。
+
+### 17.数组去重和反转数组
+
+**数组去重**
+ 方法 1
+ 扩展运算符和 Set 结构相结合，就可以去除数组的重复成员
+
+```
+// 去除数组的重复成员
+[...new Set([1, 2, 2, 3, 4, 5, 5])];
+// [1, 2, 3, 4, 5]
+复制代码
+```
+
+方法 2
+ Array.from()能把set结构转换为数组
+
+```
+Array.from(new Set([1, 2, 2, 3, 4, 5, 5]));
+// [1, 2, 3, 4, 5]
+复制代码
+```
+
+方法 3（ES5）
+
+```
+function unique(arr) {
+  let temp = [];
+  arr.forEach(e => {
+    if (temp.indexOf(e) == -1) {
+      temp.push(e);
+    }
+  });
+
+  return temp;
+}
+复制代码
+```
+
+**反转数组**
+ 要求
+ 输入: I am a student  输出: student a am I
+ 输入是数组 输出也是数组 不允许用 split splice reverse
+
+解法一
+
+```
+function reverseArray(arr) {
+    let str = arr.join(' ')
+    let result = []
+    let word = ''
+    for (let i = 0; i < str.length; i++) {
+        if (str[i] != ' ') {
+            word += str[i]
+        } else {
+            result.unshift(word)
+            word = ''
+        }
+    }
+    
+    result.unshift(word)
+    return result
+}
+
+console.log(reverseArray(['I', 'am', 'a', 'student']))
+// ["student", "a", "am", "I"]
+复制代码
+```
+
+解法二
+
+```
+function reverseArray(arr) {
+    let result = []
+    let distance = arr.length - 1
+    for (let i = 0; i <= distance; i++) {
+        result[i] = arr[distance - i]
+    }
+
+    return result
+}
+复制代码
+```
+
+### 18.函数节流和函数防抖
+
+**函数节流**
+ 函数节流是优化**高频率**执行js代码的一种手段
+ 可以**减少**高频调用函数的执行次数
+
+作用：减少代码执行次数, 提升网页性能
+ 应用场景：oninput / onmousemove / onscroll / onresize 等事件
+
+```
+let timerId = null;
+let flag = true;
+window.onresize = function () {
+    if (!flag)  return;
+    flag = false;
+    timerId && clearInterval(timerId);
+    timerId = setTimeout(function () {
+        flag = true;
+        console.log("尺寸变化");
+    }, 500);
+}
+复制代码
+```
+
+封装一个节流函数
+
+```
+function throttle(fn, delay){
+    let timer = null
+    return function (){
+        // 如果已经有定时器了，那么就退出
+        if(timer) return
+        // 获取debounce执行作用域的this
+        let _this = this
+        // 获取参数
+        let args = arguments
+        
+        timer = setTimeout(function(){
+            // 改变执行函数内部的this指向debounce执行作用域的this，并把参数传给执行函数
+            fn.apply(_this, args)
+            // 在delay后执行完fn之后清空timer，此时timer为假，throttle触发可以进入计时器
+            timer = null
+        }, delay)
+    }
+}
+复制代码
+```
+
+**函数防抖**
+ 函数防抖是也优化**高频率**执行js代码的一种手段
+ 可以让被调用的函数在一次连续的高频操作中只被调用**一次**
+
+作用：减少代码执行次数, 提升网页性能
+ 应用场景：oninput / onmousemove / onscroll / onresize 等事件
+
+```
+let timerId = null;
+window.onresize = function () {
+    timerId && clearInterval(timerId);
+    timerId = setTimeout(function () {
+        console.log("尺寸变化");
+    }, 500);
+}
+复制代码
+```
+
+封装一个防抖函数
+
+> 方便防抖函数的调用和回调函数fn的传参问题，这里使用闭包来设计防抖函数
+
+```
+function debounce(fn, delay){
+    let timer = null
+    return function(){
+        // 设置了定时器就清空这个定时器，没有就去设置定时器
+        timer && clearTimeout(timer)
+        // 获取debounce执行作用域的this
+        let _this = this
+        // 获取参数
+        let args = arguments
+            
+        timer = setTimeout(function(){
+            fn.apply(_this, args)
+        }, delay)
+    }
+}
+复制代码
+```
+
+**函数节流和函数防抖区别**
+ 函数节流是**减少**连续的高频操作函数执行次数 (例如连续调用10次, 可能只执行3-4次)
+ 函数防抖是让连续的高频操作时函数只执行**一次**(例如连续调用10次, 但是只会执行1次)
+
+### 19.new 操作符具体干了什么呢？如何实现？
+
+### 20.js如何实现继承？JavaScript 继承的几种实现方式？
