--- a/面试题/前端面试真题/腾讯面试真题1.md
+++ b/面试题/前端面试真题/腾讯面试真题1.md
@@ -106,3 +106,88 @@ Q:挥手为什么要4次？
 关闭连接时，当服务端收到FIN报文时，很可能并不会立即关闭SOCKET，所以只能先回复一个ACK报文，告诉客户端，"你发的FIN报文我收到了"。只有等到我服务端所有的报文都发送完了，我才能发送FIN报文，因此不能一起发送。故需要四次挥手。
 ```
 
+##### 你用过git吗？常见哪些指令？你知道回退是什么指令吗？
+
+常用的指令有：
+
+**克隆/关联/推送远程库**
+
+```
+$ git remote add origin ssh//关联远程库
+$ git push -u origin master //本地库所有内容推送至远程库
+$ git push origin master //可推送最新修改
+```
+
+**添加、提交文件**
+
+```other
+$ git add file //添加文件至暂存区
+$ git commit -m"explain" //提交
+//可添加多个 一次提交
+```
+
+**版本管理**
+
+```other
+$ git status //查看工作区与版本库的状态
+$ git log //查看提交记录
+$ git reset --hard xxx//版本回退 xxx为版本号或 HEAD^ HEAD^^ HEAD~数字 。git用HEAD表示当前版本，，上一个版本就是HEAD^，上上一个版本就是HEAD^^，当然往上100个版本写100个^比较容易数不过来，所以写成HEAD~100.
+```
+
+**分支管理**
+
+```
+$ git branch //查看当前分支
+$ git checkout master //切换至master分支
+$ git checkout -b dev //创建dev分支并切换到dev分支
+$ git merge dev //即dev合并到当前分支
+$ git branch -d dev //删除分支
+```
+
+##### 你了解Webpack吗？
+
+Webpack吗，了解一些。Webpack 是一个模块打包器。我使用 webpack 的一个最主要原因是为了简化页面依赖的管理，并且通过将其打包为一个文件来降低页面加载时请求的资源数。
+
+我认为 webpack 的主要原理是，它将所有的资源都看成是一个模块，并且把页面逻辑当作一个整体，通过一个给定的入口文件，webpack 从这个文件开始，找到所有的依赖文件，将各个依赖文件模块通过 loader 和 plugins 处理后，然后打包在一起，最后输出一个浏览器可识别的 JS 文件。
+
+Webpack 具有四个核心的概念，分别是 Entry（入口）、Output（输出）、loader 和 Plugins（插件）。
+
+Entry 是 webpack 的入口起点，它指示 webpack 应该从哪个模块开始着手，来作为其构建内部依赖图的开始。
+
+Output 属性告诉 webpack 在哪里输出它所创建的打包文件，也可指定打包文件的名称，默认位置为 ./dist。
+
+loader 可以理解为 webpack 的编译器，它使得 webpack 可以处理一些非 JavaScript 文件。在对 loader 进行配置的时候，test 属性，标志有哪些后缀的文件应该被处理，是一个正则表达式。use 属性，指定 test 类型的文件应该使用哪个 loader 进行预处理。常用的 loader 有 css-loader、style-loader 等。
+
+插件可以用于执行范围更广的任务，包括打包、优化、压缩、搭建服务器等等，要使用一个插件，一般是先使用 npm 包管理器进行安装，然后在配置文件中引入，最后将其实例化后传递给 plugins 数组属性。
+
+使用 webpack 的确能够提供我们对于项目的管理，但是它的缺点就是调试和配置起来太麻烦了。但现在 webpack4.0 的免配置一定程度上解决了这个问题。但是我感觉就是对我来说，就是一个黑盒，很多时候出现了问题，没有办法很好的定位。
+
+##### 你了解React吗？
+
+不是很了解。我只知道React是一个JavaScript库，可以把它看成MVC中的V（视图）层。MVC是一种设计模式，它将应用划分为3个部分：数据(模型)、展示层(视图)和用户交互层
+
+![img](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/a86c349b74f7422fbc392c081179b9bd~tplv-k3u1fbpfcp-zoom-1.image)
+
+如今主流的web框架基本都采用的是MVVM模式，为什么放弃了MVC模式，转而投向了MVVM模式呢。在之前的MVC中我们提到一个控制器对应一个视图，控制器用状态机进行管理，这里就存在一个问题，如果项目足够大的时候，状态机的代码量就变得非常臃肿，难以维护。还有一个就是性能问题，在MVC中我们大量的操作了DOM，而大量操作DOM会让页面渲染性能降低，加载速度变慢，影响用户体验。最后就是当Model频繁变化的时候，开发者就主动更新View，那么数据的维护就变得困难。世界是懒人创造的，为了减小工作量，节约时间，一个更适合前端开发的架构模式就显得非常重要。这时候MVVM模式在前端中的应用就应运而生。 MVVM让用户界面和逻辑分离更加清晰。下面是MVVM的示意图，可以看到它由Model、ViewModel、View这三个部分组成。
+
+![img](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/161b8195912e4305)
+
+Vue,React,Angular都是业界非常优秀的前端框架，我一开始是学了Vue。原因有几点：
+
+首先，Vue是比较轻量级的框架，比较好上手，对新手来说比较友好。
+
+其次，Vue有响应式更新机制，就是说当我们的数据更新之后，视图会自动的刷新。React的话好像需要进行一个性能优化，Vue这个响应式更新机制它已经在底层去帮我们去处理这些事情。
+
+我认为学习Vue是一个跳板，当一个比较好上手的框架你会使用了之后，就能更好地学习其它框架。这就是我学习Vue的一些原因。
+
+##### 你知道gulp吗？
+
+###### webpack与grunt、gulp的不同？
+
+三者都是前端构建工具，grunt和gulp在早期比较流行，现在webpack相对来说比较主流，不过一些轻量化的任务还是会用gulp来处理，比如单独打包CSS文件等。
+
+grunt和gulp基于任务和流（Task、Stream），强调的是前端流程的自动化。比如定义一系列的task让grunt或gulp来依次执行，让整个流程自动化，grunt和gulp也被称作前端自动化任务管理工具。
+
+而webpack（静态模块打包工具）基于入口，强调的是前端模块化开发管理。它是把一个项目当做一个整体，通过一个给定的入口，Webpack将从这个文件开始找到你的项目的所有依赖文件，使用loaders、plugins进行一些处理，最后打包为一个（或多个）浏览器可识别的Javascript文件。
+
+##### 谈谈你对响应式原理的理解
