添加高频考点：说一下Vue的生命周期

--- a/面试题/高频考点.md
+++ b/面试题/高频考点.md
@@ -660,3 +660,54 @@ function debounce(fn, delay){
 ### 19.new 操作符具体干了什么呢？如何实现？
 
 ### 20.js如何实现继承？JavaScript 继承的几种实现方式？
+
+### 21.说一下Vue的生命周期
+
+Vue的生命周期是Vue 实例从创建到销毁的过程。从开始创建、初始化数据、编译模板、挂载Dom→渲染、更新→渲染、卸载等一系列过程，称之为 Vue 的生命周期。
+
+Vue生命周期可以分为三个阶段：创建阶段、运行阶段、销毁阶段
+
+Vue提供了许多钩子函数，让我们在某个阶段进行特定的操作。
+
+**创建阶段的生命周期方法**
+
+**1. beforeCreate**
+ 在调用`beforeCreate`的时候, Vue实例刚刚被创建，没有初始化好Vue实例中的数据和方法, 所以还不能访问Vue实例中保存的数据和方法。
+
+**2. created**
+ 在调用`created`的时候, 是我们**最早**能够访问Vue实例中保存的数据和方法的地方
+
+**3. beforeMount**
+ 在调用`beforeMount`的时候, 表示Vue已经编译好了最终模板, 但是还没有将最终的模板渲染到界面上。
+
+**4. mounted**
+ 在调用`mounted`的时候, 表示Vue已经完成了模板的渲染, 我们已经可以拿到界面上渲染之后的内容了
+
+**运行阶段的生命周期方法**
+
+**1. beforeUpdate**
+ 在调用beforeUpdate的时候, 表示Vue实例中保存的数据已经更新了, 但是界面还没有更新。
+
+**2. updated**
+ 在调用updated的时候,数据和界面都同步更新了。
+
+**销毁阶段的生命周期方法**
+
+**1. beforeDestroy**
+ 在调用`beforeDestroy`的时候, 表示当前组件即将被销毁了，这个函数是我们**最后**能够访问到组件数据和方法的函数
+
+**2. destroyed**
+ 在调用`destroyed`的时候, 表示当前组件已经被销毁了。这时候我们已经不能去操作组件中数据和方法。
+
+### 22.什么是组件以及如何使用组件
+
+组件就是把一个很大的界面拆分为多个小的界面, 每一个小的界面就是一个组件
+ 将大界面拆分成小界面就是组件化
+
+组件化的好处是可以简化Vue实例的代码，可以提高代码复用性
+
+Vue的组件注册分为**全局注册**和**局部注册**
+ 全局注册是在全局Vue对象的component属性中绑定定义好的模板
+ 局部注册是在Vue实例的components属性中绑定定义好的模板
+
+如果是.vue文件的组件则需要通过import导入到需要的组件中。
