增加js继承面试题 new对象面试题

--- a/面试题/高频考点.md
+++ b/面试题/高频考点.md
@@ -659,7 +659,77 @@ function debounce(fn, delay){
 
 ### 19.new 操作符具体干了什么呢？如何实现？
 
+```
+// （1）首先创建了一个新的空对象
+// （2）设置原型，将对象的原型设置为函数的 prototype 对象。
+// （3）让函数的 this 指向这个对象，执行构造函数的代码（为这个新对象添加属性）
+// （4）判断函数的返回值类型，如果是值类型，返回创建的对象。如果是引用类型，就返回这个引用类型的对象。
+```
+
 ### 20.js如何实现继承？JavaScript 继承的几种实现方式？
+
+**ES5继承**
+
+1. 在子类中通过call / apply方法借助父类的构造函数
+2. 将子类的原型函数设置为父类的实例对象
+
+```
+function Person(myName, myAge) {
+    this.name = myName;
+    this.age = myAge;
+}
+Person.prototype.say = function () {
+    console.log(this.name, this.age);
+}
+function Student(myName, myAge, myScore) {
+    // 1.在子类中通过call/apply方法借助父类的构造函数
+    Person.call(this, myName, myAge);
+    this.score = myScore;
+    this.study = function () {
+        console.log("day day up");
+    }
+}
+// 2.将子类的原型对象设置为父类的实例对象
+Student.prototype = new Person();
+Student.prototype.constructor = Student;
+
+let stu = new Student("zs", 18, 98);
+stu.say();  // zs 18
+复制代码
+```
+
+**ES6继承**
+
+1. 通过子类extends父类, 来告诉浏览器子类要继承父类
+2. 通过super()方法修改 this
+
+```
+class Person{
+    constructor(myName, myAge){
+        // this = stu;
+        this.name = myName; // stu.name = myName;
+        this.age = myAge;   // stu.age = myAge;
+    }
+    say(){
+        console.log(this.name, this.age);
+    }
+}
+// 以下代码的含义: 告诉浏览器将来Student这个类需要继承Person这个类
+class Student extends Person{
+    constructor(myName, myAge, myScore){
+        super(myName, myAge);   // 这一行代码相当于在子类中通过call/apply方法借助父类的构造函数
+        this.score = myScore;
+    }
+    study(){
+        console.log("day day up");
+    }
+}
+
+let stu = new Student("zs", 18, 98);
+stu.say();  // zs 18
+```
+
+
 
 ### 21.说一下Vue的生命周期
 
@@ -802,3 +872,65 @@ document.querySelector("input").onclick = function () {
 }
 ```
 
+### 深拷贝浅拷贝
+
+**深拷贝**
+ 修改新变量的值不会影响原有变量的值
+ 默认情况下基本数据类型都是深拷贝
+
+**浅拷贝**
+ 修改新变量的值会影响原有变量的值
+ 默认情况下引用类型都是浅拷贝
+
+**通过自定义函数实现深拷贝**
+
+```
+class Person{
+  name = "zs";
+  cat = {
+      age : 3
+  };
+  score = [1, 3, 5];
+}
+let p1 = new Person();
+let p2 = new Object();
+
+// 通过自定义函数实现深拷贝
+function deCopy(target, source) {
+  // 1.通过遍历拿到source中所有的属性
+  for (let key in source){
+      // 2.取出当前遍历到的属性对应的取值
+      let sourceValue = source[key];
+      // 3.判断当前的取值是否是引用数据类型
+      if (sourceValue instanceof Object){ // 如果是引用数据类型, 那么要新建一个存储空间保存
+          // 4.通过sourceValue.constructor拿到这个对象的构造函数的类型, 然后新建这个对象或数组
+          let subTarget = new sourceValue.constructor;
+          target[key] = subTarget;
+          // 5.再次调用拷贝, 将遍历到的属性的取值拷贝给新建的对象或者数组
+          deCopy(subTarget, sourceValue);
+      }else { // 如果不是引用数据类型, 之间将属性拷贝即可
+          target[key] = sourceValue;
+      }
+  }
+}
+
+// 简化版本
+function deCopy(obj){
+	// 如果不是引用数据类型, 直接将属性拷贝即可
+	if(typeof obj != 'object')	return obj
+	// 如果是引用数据类型, 那么要新建一个存储空间保存
+	let newObj = new obj.constructor
+	for(let key in obj){
+		// 递归调用拷贝, 将遍历到的属性的取值拷贝给新建的对象或者数组
+		newObj[key] = deCopy(obj[key])
+	}
+	return newObj
+}
+
+deCopy(p2, p1);
+p2.cat.age = 666;   // 修改新变量的值不会影响到原有变量, 这里是深拷贝
+console.log(p1.cat.age);    // 3
+console.log(p2.cat.age);    // 666
+```
+
+### Vue的插槽slot
