修改Vue电商项目

--- a/Vue电商管理系统项目/10-项目优化上线.md
+++ b/Vue电商管理系统项目/10-项目优化上线.md
@@ -153,11 +153,7 @@ config.set('externals', {
 
 ### 1.8 通过 CDN 优化 ElementUI 的打包
 
-虽然在开发阶段，我们启用了 element-ui 组件的按需加载，尽可能的减少了打包的体积，但是那些被按需加
-
-载的组件，还是占用了较大的文件体积。此时，我们可以将 element-ui 中的组件，也通过 CDN 的形式来加
-
-载，这样能够进一步减小打包后的文件体积。
+虽然在开发阶段，我们启用了 element-ui 组件的按需加载，尽可能的减少了打包的体积，但是那些被按需加载的组件，还是占用了较大的文件体积。此时，我们可以将 element-ui 中的组件，也通过 CDN 的形式来加载，这样能够进一步减小打包后的文件体积。
 
 具体操作流程如下：
 
