修改js面试题和高频考点

--- a/面试题/高频考点.md
+++ b/面试题/高频考点.md
@@ -172,23 +172,20 @@ BFC （Block Formatting Context） 是**块级格式化上下文**，是**Web页
 
 #### 块级元素
 
-**方法1：margin**
+**如果宽度给定**
 
-1.如果盒子**宽度给定**，给其设置`margin: 0 auto;`（作用：使盒子自己居中）
+- 设置`margin: 0 auto;`
+- 首先设置父元素为相对定位，再设置子元素为绝对定位，设置子元素的**left:50%**。设置子元素的 `margin-left: -元素宽度的一半px;`
 
-2.如果盒子**不定宽度**，则子元素的宽度默认与父元素一样宽。这时需要设置子元素为`display: inline-block;` 或`display: inline;`即将其转换成行内块级/行内元素，给父元素设置 `text-align: center;`
+**如果宽度不给**
 
-**方法2：定位**
+- 定位，父元素相对定位，子元素绝对，设置子元素的**left:50%**。利用css3新增属性给子元素设置`transform: translateX(-50%);`
 
-首先设置父元素为相对定位，再设置子元素为绝对定位，设置子元素的**left:50%**，即让子元素的左上角水平居中，再分情况：
+1.如果盒子**宽度给定**，给其（作用：使盒子自己居中）
 
-1.盒子**定宽度**，设置绝对子元素的 `margin-left: -元素宽度的一半px;`或者设置`transform: translateX(-50%);`
+**用flex布局**
 
-2.盒子**不定宽度：**利用css3新增属性`transform: translateX(-50%);`
-
-**方法3：用flex布局**
-
-使用flex布局，只需要给待处理的块状元素的父元素添加属性`display: flex; justify-content: center;`
+使用flex布局，只需要给待处理的块级元素的父元素添加属性`display: flex; justify-content: center;`
 
 ### 5.如何实现盒子垂直居中
 
@@ -214,7 +211,7 @@ BFC （Block Formatting Context） 是**块级格式化上下文**，是**Web页
 
 2.盒子**不定高度：**利用css3新增属性**transform: translateY(-50%);**
 
-**方法2：flex布局**
+**flex布局**
 
 使用flexbox布局，只需要给待处理的块状元素的父元素添加属性`display: flex; align-items: center;`
 
