增加了三种Promise的实现

--- a/面试题/真题题目大杂烩.md
+++ b/面试题/真题题目大杂烩.md
@@ -228,101 +228,460 @@ let g = greet()
 console.log(g[Symbol.iterator]() === g) // true
 ```
 
+#### Promise的实现原理
 
+promise的实现原理，Promise内部有一个变量记录当前状态为pending、fulfilled还是rejected，还有两个队列保存成功的回调和失败的回调。
 
-#### 
+当在Promise中调用resolve之后，如果当前状态为pending，则状态由pending转fulfilled，记录传入值，并依次执行成功回调；若在Promise中调用reject，如果当前状态为pending，则状态由pending转rejected，记录传入值，并依次执行失败回调。这就是resolve和reject的实现原理。
+
+then方法的话，它允许注册成功、失败两个回调函数，如果当前状态为pending，则分别放入成功、失败回调数组中；如果为fulfilled，则执行成功回调；如果是rejected，则执行失败回调，最后返回this。
 
 #### 手写一个 Promise/实现一下Promise
 
-简易Promise。
 
-**思路：**
+
+**最简单**
 
 ```js
+//判断变量是否为function
+const isFunction = value => typeof value === 'function';
+//定义状态常量
 const PENDING = "pending";
 const FULFILLED = "fulfilled";
 const REJECTED = "rejected";
 
-function Promise(fn) {
-  // 保存初始化状态,设置self是为了在resolve、reject函数里面使用，	   resolve、reject函数的this是window
-  var self = this;
-  // 初始化状态
-  this.state = PENDING;
-  // 用于保存 resolve 或者 rejected 传入的值
-  this.value = null;
-  // 用于保存 resolve 的回调函数
-  this.fulfilledCallbacks = [];
-  // 用于保存 reject 的回调函数
-  this.rejectedCallbacks = [];
-
-  // 状态转变为 fulfilled 方法
-  function resolve(value) {
-    // 保证代码的执行顺序为本轮事件循环的末尾
+class MyPromise {
+  //构造方法
+  constructor(handle) {
+    if (!isFunction(handle)) {
+      throw new Error('Promise must accept function param');
+    }
+    this.status = PENDING;
+    this.value = undefined;
+    // 用于保存 resolve 的回调函数
+    this.fulfilledCallbacks = [];
+    // 用于保存 reject 的回调函数
+    this.rejectedCallbacks = [];
+    //执行handle
+    try {
+      handle(this._resolve.bind(this), this._reject.bind(this));
+    } catch (error) {
+      this.reject(err);
+    }
+  }
+  //resolve的函数
+  _resolve(value) {
     setTimeout(() => {
-      // 只有状态为 pending 时才能转变，
-      if (self.state === PENDING) {
-        // 修改状态
-        self.state = FULFILLED;
+      if (this.status !== PENDING) return;
+      this.status = FULFILLED;
+      this.value = value;
+      this.fulfilledCallbacks.forEach(callback => {
+        callback(value)
+      })
+    }, 0)
+  }
 
-        // 设置传入的值
-        self.value = value;
-
-        // 执行回调函数
-        self.fulfilledCallbacks.forEach(callback => {
-          callback(value);
-        });
-      }
+  //reject的函数
+  _reject(err) {
+    setTimeout(() => {
+      if (this.status !== PENDING) return;
+      this.status = REJECTED;
+      this.value = err;
+      this.rejectedCallbacks.forEach(callback => {
+        callback(err);
+      })
     }, 0);
   }
 
-  // 状态转变为 rejected 方法
-  function reject(value) {
-    // 保证代码的执行顺序为本轮事件循环的末尾
-    setTimeout(() => {
-      // 只有状态为 pending 时才能转变
-      if (self.state === PENDING) {
-        // 修改状态
-        self.state = REJECTED;
-        // 设置传入的值
-        self.value = value;
-        // 执行回调函数
-        self.rejectedCallbacks.forEach(callback => {
-          callback(value);
-        });
+  // then方法
+  then(onFulfilled, onRejected) {
+    const { value, status } = this;
+    // 返回一个新的Promise对象
+    return new MyPromise((onFulfilledNext, onRejectedNext) => {
+      switch (status) {
+        case PENDING:
+          this.fulfilledCallbacks.push(onFulfilled);
+          this.rejectedCallbacks.push(onRejected);
+          break;
+        //状态改变，则立即执行对应的回调函数
+        case FULFILLED:
+          onFulfilled(value)
+          break;
+        case REJECTED:
+          onRejected(value)
+          break;
       }
-    }, 0);
-  }
-
-  // 将两个方法传入函数执行
-  try {
-    //执行Promise
-    fn(resolve, reject);
-  } catch (e) {
-    // 遇到错误时，捕获错误，执行 reject 函数
-    reject(e);
+    })
   }
 }
 
-Promise.prototype.then = function(onResolved, onRejected) {
-// 如果是等待状态，则将函数加入对应列表中
-  if (this.state === PENDING) {
-    this.fulfilledCallbacks.push(onResolved);
-    this.rejectedCallbacks.push(onRejected);
-  }
-
-  // 如果状态已经凝固，则直接执行对应状态的函数
-
-  if (this.state === FULFILLED) {
-    onResolved(this.value);
-  }
-
-  if (this.state === REJECTED) {
-    onRejected(this.value);
-  }	 
-  // 返回this支持then 方法可以被同一个 promise 调用多次
-  return this;
-};
+let promise1 = new MyPromise((resolve, reject) => {
+  setTimeout(() => {
+    resolve('这里返回一个普通值')
+  }, 1000)
+})
+promise1.then(res => {
+  console.log(res) //1秒后打印出：这里返回一个普通值
+})
 ```
+
+**简易Promise，仅实现_resolve _reject then。但有各种情况的判断**
+
+```js
+// 判断变量否为function
+const isFunction = variable => typeof variable === 'function'
+// 定义Promise的三种状态常量
+const PENDING = 'PENDING'
+const FULFILLED = 'FULFILLED'
+const REJECTED = 'REJECTED'
+
+class MyPromise {
+  constructor(handle) {
+    if (!isFunction(handle)) {
+      throw new Error('MyPromise must accept a function as a parameter')
+    }
+    // 添加状态
+    this._status = PENDING
+    // 添加状态
+    this._value = undefined
+    // 添加成功回调函数队列
+    this._fulfilledQueues = []
+    // 添加失败回调函数队列
+    this._rejectedQueues = []
+    // 执行handle
+    try {
+      handle(this._resolve.bind(this), this._reject.bind(this))
+    } catch (err) {
+      this._reject(err)
+    }
+  }
+  // 添加resovle时执行的函数
+  _resolve(val) {
+    const run = () => {
+      if (this._status !== PENDING) return
+      // 依次执行成功队列中的函数，并清空队列
+      const runFulfilled = (value) => {
+        let cb;
+        while (cb = this._fulfilledQueues.shift()) {
+          cb(value)
+        }
+      }
+      // 依次执行失败队列中的函数，并清空队列
+      const runRejected = (error) => {
+        let cb;
+        while (cb = this._rejectedQueues.shift()) {
+          cb(error)
+        }
+      }
+      /* 如果resolve的参数为Promise对象，则必须等待该Promise对象状态改变后,
+        当前Promsie的状态才会改变，且状态取决于参数Promsie对象的状态
+      */
+      if (val instanceof MyPromise) {
+        val.then(value => {
+          this._value = value
+          this._status = FULFILLED
+          runFulfilled(value)
+        }, err => {
+          this._value = err
+          this._status = REJECTED
+          runRejected(err)
+        })
+      } else {
+        this._value = val
+        this._status = FULFILLED
+        runFulfilled(val)
+      }
+    }
+    // 为了支持同步的Promise，这里采用异步调用
+    setTimeout(run, 0)
+  }
+  // 添加reject时执行的函数
+  _reject(err) {
+    if (this._status !== PENDING) return
+    // 依次执行失败队列中的函数，并清空队列
+    const run = () => {
+      this._status = REJECTED
+      this._value = err
+      let cb;
+      while (cb = this._rejectedQueues.shift()) {
+        cb(err)
+      }
+    }
+    // 为了支持同步的Promise，这里采用异步调用
+    setTimeout(run, 0)
+  }
+  // 添加then方法
+  then(onFulfilled, onRejected) {
+    const { _value, _status } = this
+    // 返回一个新的Promise对象
+    // 返回的新的 Promise 对象的状态依赖于当前 then 方法回调函数执行的情况以及返回值，
+    return new MyPromise((onFulfilledNext, onRejectedNext) => {
+      // 封装一个成功时执行的函数
+      let fulfilled = value => {
+        try {
+          //onFulfilled不是函数且此时promise1成功，新Promise状态变为fulfilled，且promise1的value作为其参数
+          if (!isFunction(onFulfilled)) {
+            onFulfilledNext(value)
+          } else {
+            //执行onFulfilled，获取返回值
+            let res = onFulfilled(value);
+            if (res instanceof MyPromise) {
+              // 如果当前回调函数返回MyPromise对象，必须等待其状态改变后在执行下一个回调
+              res.then(onFulfilledNext, onRejectedNext)
+            } else {
+              //否则会将返回结果直接作为参数，传入下一个then的回调函数，并立即执行下一个then的回调函数
+              onFulfilledNext(res)
+            }
+          }
+        } catch (err) {
+          // 如果函数执行出错，新的Promise对象的状态为失败
+          onRejectedNext(err)
+        }
+      }
+      // 封装一个失败时执行的函数
+      let rejected = error => {
+        try {
+          if (!isFunction(onRejected)) {
+            onRejectedNext(error)
+          } else {
+            let res = onRejected(error);
+            if (res instanceof MyPromise) {
+              // 如果当前回调函数返回MyPromise对象，必须等待其状态改变后在执行下一个回调
+              res.then(onFulfilledNext, onRejectedNext)
+            } else {
+              //否则会将返回结果直接作为参数，传入下一个then的回调函数，并立即执行下一个then的回调函数
+              onFulfilledNext(res)
+            }
+          }
+        } catch (err) {
+          // 如果函数执行出错，新的Promise对象的状态为失败
+          onRejectedNext(err)
+        }
+      }
+      switch (_status) {
+        // 当状态为pending时，将then方法回调函数加入执行队列等待执行
+        case PENDING:
+          this._fulfilledQueues.push(fulfilled)
+          this._rejectedQueues.push(rejected)
+          break
+        // 当状态已经改变时，立即执行对应的回调函数
+        case FULFILLED:
+          fulfilled(_value)
+          break
+        case REJECTED:
+          rejected(_value)
+          break
+      }
+    })
+  }
+}
+```
+
+**完整版Promise**
+
+```js
+// 判断变量否为function
+const isFunction = variable => typeof variable === 'function'
+// 定义Promise的三种状态常量
+const PENDING = 'PENDING'
+const FULFILLED = 'FULFILLED'
+const REJECTED = 'REJECTED'
+
+class MyPromise {
+  constructor(handle) {
+    if (!isFunction(handle)) {
+      throw new Error('MyPromise must accept a function as a parameter')
+    }
+    // 添加状态
+    this._status = PENDING
+    // 添加状态
+    this._value = undefined
+    // 添加成功回调函数队列
+    this._fulfilledQueues = []
+    // 添加失败回调函数队列
+    this._rejectedQueues = []
+    // 执行handle
+    try {
+      handle(this._resolve.bind(this), this._reject.bind(this))
+    } catch (err) {
+      this._reject(err)
+    }
+  }
+  // 添加resovle时执行的函数
+  _resolve(val) {
+    const run = () => {
+      if (this._status !== PENDING) return
+      // 依次执行成功队列中的函数，并清空队列
+      const runFulfilled = (value) => {
+        let cb;
+        while (cb = this._fulfilledQueues.shift()) {
+          cb(value)
+        }
+      }
+      // 依次执行失败队列中的函数，并清空队列
+      const runRejected = (error) => {
+        let cb;
+        while (cb = this._rejectedQueues.shift()) {
+          cb(error)
+        }
+      }
+      /* 如果resolve的参数为Promise对象，则必须等待该Promise对象状态改变后,
+        当前Promsie的状态才会改变，且状态取决于参数Promsie对象的状态
+      */
+      if (val instanceof MyPromise) {
+        val.then(value => {
+          this._value = value
+          this._status = FULFILLED
+          runFulfilled(value)
+        }, err => {
+          this._value = err
+          this._status = REJECTED
+          runRejected(err)
+        })
+      } else {
+        this._value = val
+        this._status = FULFILLED
+        runFulfilled(val)
+      }
+    }
+    // 为了支持同步的Promise，这里采用异步调用
+    setTimeout(run, 0)
+  }
+  // 添加reject时执行的函数
+  _reject(err) {
+    if (this._status !== PENDING) return
+    // 依次执行失败队列中的函数，并清空队列
+    const run = () => {
+      this._status = REJECTED
+      this._value = err
+      let cb;
+      while (cb = this._rejectedQueues.shift()) {
+        cb(err)
+      }
+    }
+    // 为了支持同步的Promise，这里采用异步调用
+    setTimeout(run, 0)
+  }
+  // 添加then方法
+  then(onFulfilled, onRejected) {
+    const { _value, _status } = this
+    // 返回一个新的Promise对象
+    return new MyPromise((onFulfilledNext, onRejectedNext) => {
+      // 封装一个成功时执行的函数
+      let fulfilled = value => {
+        try {
+          if (!isFunction(onFulfilled)) {
+            onFulfilledNext(value)
+          } else {
+            let res = onFulfilled(value);
+            if (res instanceof MyPromise) {
+              // 如果当前回调函数返回MyPromise对象，必须等待其状态改变后在执行下一个回调
+              res.then(onFulfilledNext, onRejectedNext)
+            } else {
+              //否则会将返回结果直接作为参数，传入下一个then的回调函数，并立即执行下一个then的回调函数
+              onFulfilledNext(res)
+            }
+          }
+        } catch (err) {
+          // 如果函数执行出错，新的Promise对象的状态为失败
+          onRejectedNext(err)
+        }
+      }
+      // 封装一个失败时执行的函数
+      let rejected = error => {
+        try {
+          if (!isFunction(onRejected)) {
+            onRejectedNext(error)
+          } else {
+            let res = onRejected(error);
+            if (res instanceof MyPromise) {
+              // 如果当前回调函数返回MyPromise对象，必须等待其状态改变后在执行下一个回调
+              res.then(onFulfilledNext, onRejectedNext)
+            } else {
+              //否则会将返回结果直接作为参数，传入下一个then的回调函数，并立即执行下一个then的回调函数
+              onFulfilledNext(res)
+            }
+          }
+        } catch (err) {
+          // 如果函数执行出错，新的Promise对象的状态为失败
+          onRejectedNext(err)
+        }
+      }
+      switch (_status) {
+        // 当状态为pending时，将then方法回调函数加入执行队列等待执行
+        case PENDING:
+          this._fulfilledQueues.push(fulfilled)
+          this._rejectedQueues.push(rejected)
+          break
+        // 当状态已经改变时，立即执行对应的回调函数
+        case FULFILLED:
+          fulfilled(_value)
+          break
+        case REJECTED:
+          rejected(_value)
+          break
+      }
+    })
+  }
+  // 添加catch方法
+  catch(onRejected) {
+    return this.then(undefined, onRejected)
+  }
+  // 添加静态resolve方法
+  static resolve(value) {
+    // 如果参数是MyPromise实例，直接返回这个实例
+    if (value instanceof MyPromise) return value
+    return new MyPromise(resolve => resolve(value))
+  }
+  // 添加静态reject方法
+  static reject(value) {
+    return new MyPromise((resolve, reject) => reject(value))
+  }
+  // 添加静态all方法
+  static all(list) {
+    return new MyPromise((resolve, reject) => {
+      /**
+       * 返回值的集合
+       */
+      let values = []
+      let count = 0
+      for (let [i, p] of list.entries()) {
+        // 数组参数如果不是MyPromise实例，先调用MyPromise.resolve
+        this.resolve(p).then(res => {
+          values[i] = res
+          count++
+          // 所有状态都变成fulfilled时返回的MyPromise状态就变成fulfilled
+          if (count === list.length) resolve(values)
+        }, err => {
+          // 有一个被rejected时返回的MyPromise状态就变成rejected
+          reject(err)
+        })
+      }
+    })
+  }
+  // 添加静态race方法
+  static race(list) {
+    return new MyPromise((resolve, reject) => {
+      for (let p of list) {
+        // 只要有一个实例率先改变状态，新的MyPromise的状态就跟着改变
+        this.resolve(p).then(res => {
+          resolve(res)
+        }, err => {
+          reject(err)
+        })
+      }
+    })
+  }
+  finally(cb) {
+    return this.then(
+      value => MyPromise.resolve(cb()).then(() => value),
+      reason => MyPromise.resolve(cb()).then(() => { throw reason })
+    );
+  }
+}
+```
+
+
 
 #### call() 、apply() 和bind()的区别？
 
@@ -563,7 +922,7 @@ Dep(订阅器)
 Promise Generator Async/Await
 ```
 
-ES6中的异步主要有三种实现方式：Promise、 Generator、Async/Await
+ES6中一共有三种异步编程解决方案：Promise、 Generator、Async/Await
 
 **Promise**
 
@@ -614,7 +973,7 @@ console.log(g[Symbol.iterator]() === g) // true
 
 ES7引入的async函数，是对js异步请求的进一步完善。async/await不再需要执行器，执行async函数，就会自动执行函数内部的逻辑。await后面既可以是promise也可以是任意类型的值，此时等同于同步操作。
 
-**解决了什么问题**
+**实际应用**
 
 我在Vue项目中，使用axios发起HTTP请求时，使用了async / await发起异步请求。一开始，我使用axios发起HTTP请求的时候报错，原因是我发起HTTP请求没有做任何修饰操作，这时候请求没完成，我就判断它的返回的状态码，获取不到，所以报错了。
 
