修改优化上线指南

--- a/Vue电商管理系统项目/10-项目优化上线.md
+++ b/Vue电商管理系统项目/10-项目优化上线.md
@@ -257,6 +257,24 @@ const Home = () => import('../components/Home')
 
 ![image-20210116230443339](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210116230443339.png)
 
+文件体积、速度优化对比：
+
+**文件体积**
+
+app.js 1.7MB → 20.2kB 体积减小了95%。
+
+vendor.js 17.8MB → 95.9kB 体积减小了98%。
+
+由之前的三个包，拆分成了多个，按需加载。
+
+**打包速度**
+
+之前是 31s~34s ， 体积优化后稳定在6~8s。打包速度提升了 70% 左右。
+
+![image-20210309130741033](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210309130741033.png)
+
+![image-20210309131126441](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210309131126441.png)
+
 ## 2 项目上线
 
 ### 2.1 项目上线相关配置
