修改面试题

--- a/面试题/真题题目大杂烩.md
+++ b/面试题/真题题目大杂烩.md
@@ -4,7 +4,7 @@
 
 #### Symbol类型是做什么的？
 
-`Symbol` 是 `ES6` 新推出的一种基本类型，它表示独一无二的值。它最大的用途就是用来定义对象唯一的属性名。
+`Symbol` 是 `ES6` 新推出Plugin的一种基本类型，它表示独一无二的值。它最大的用途就是用来定义对象唯一的属性名。
 
 #### 如何定义对象唯一的属性名。
 
