题目：如果用户出现打开网站后出现白屏，该如何排查问题

--- a/面试题/真题题目大杂烩.md
+++ b/面试题/真题题目大杂烩.md
@@ -1140,3 +1140,11 @@ Expires 是 HTTP/1 的产物，表示资源会在 Wed, 22 Oct 2018 08:41:00 GMT 
 
 深入学习JavaScript，看《JavaScript高级程序设计》这本书。
 
+#### 如果用户出现打开网站后出现白屏，该如何排查问题
+
+出现白屏也分成两种情况，一是一直白屏，而是短暂白屏。
+
+一直白屏，那可能就是代码出现了错误，打开F12看看是否报错，如果有则按照报错信息去解决。
+
+如果是短暂白屏，那就是加载性能问起。那么打开F12，查看NetWork，看瀑布图，是哪些文件加载时间过久。我们针对这些文件进行一些处理，比如说CDN外部加载、压缩等等。
+
