添加腾讯算法真题

--- a/面试题/算法题.md
+++ b/面试题/算法题.md
@@ -5,6 +5,7 @@
 - `<<`表示左移，不分正负数，**补码**低位补0
 
 - `>>`表示右移，如果该数为正，则**补码**高位补0，若为负数，则**补码**高位补1；
+
 - `>>>`表示无符号右移，即若该数为正，则高位补0，而若该数为负数，则右移后高位同样补0。
 
 - 8位二进制数的取值范围：[-127 , 127]
@@ -89,5 +90,212 @@ function numberToIp(number) {
 }
 ```
 
+#### 给一个合法url，然后验证其请求的是一个以.qq.com结尾的url
+
+使用正则式 /^(http:|https:)\/\/([\w-]+.)+qq.com\/\//.test(url)
+
+```js
+var reg = /^(http:|https:)\/\/([\w-]+.)+qq.com\/\//
+reg.test(url)
+```
+
+#### leetcode415 大数相加
+
+**题目**
+
+给定两个字符串形式的非负整数 `num1` 和`num2` ，计算它们的和。返回的形式是字符串
+
+**解法一：split+reverse+竖式加法**
+
+使用split将字符串分割成数组，并使用reverse进行数组翻转，进行竖式相加，注意进位。将每次个位数计算结果保存至结果数组中，最后翻转输出。
 
 
+
+举个例子来描述处理过程：
+
+`num1 "123459" ; `
+
+`num2 "123"`
+
+两个数组翻转后:
+
+`num1 "954321"`
+
+`num2 "321"`
+
+此时个位对齐，直接相加，注意保存进位即可。
+
+当两个字符串长度有两种情况，一致、不一致，需要分情况考虑。
+
+1. 当一致时，直接对齐相加，最后判断add是否等于0，不为0存入结果数组。
+
+
+1. 当不一致时，需要对更长的字符串进行特殊处理：
+   1. 当前处于最后一个字符，当前数+ add存入结果数组
+   2. 不处于最后一个数组，（当前数组+ add）%10 存入结果数组，计算进位。
+
+两个字符串需要翻转，为什么？ 
+因为相加处理是从最右边的个位开始的，还有进位处理。 
+调用reverse()方法处理后： 
+String str1 = "954321"; 
+string str2 = "321"; 
+现在就好办了，个位对齐了。可以开始相加了，注意进位。 
+int carry = 0; 
+计算个位： 
+
+```js
+var addStrings = function (num1, num2) {
+  var arr1 = num1.split('').reverse();
+  var arr2 = num2.split('').reverse();
+  var len1 = arr1.length;
+  var len2 = arr2.length;
+  var shortArr, shortLen, longArr, longLen;
+  var result = [];
+  var add = 0;
+  if (len1 < len2) {
+    shortArr = arr1;
+    shortLen = len1;
+    longArr = arr2;
+    longLen = len2;
+  } else {
+    shortArr = arr2;
+    shortLen = len2;
+    longArr = arr1;
+    longLen = len1;
+  }
+  for (let i = 0; i < shortLen; i++) {
+    var cal = parseInt(shortArr[i]) + parseInt(longArr[i]) + add;
+    var temp = cal % 10;
+    result.push(temp);
+    add = Math.floor(cal / 10);
+  }
+  if (longLen === shortLen) {
+    if (add !== 0) {
+      result.push(add);
+    }
+  } else {
+    for (let i = shortLen; i < longLen; i++) {
+      if (i === longLen - 1) {
+        var temp = parseInt(longArr[i]) + add;
+        result.push(temp);
+      } else {
+        var cal = parseInt(longArr[i]) + add
+        var temp = cal % 10;
+        result.push(temp);
+        add = Math.floor(cal / 10);
+      }
+    }
+  }
+  return result.reverse().join('');
+};
+
+
+console.log(addStrings("123", "123"));
+
+```
+
+**解法二：reverse + 竖式加法 + 缺位补零**
+
+竖式加法：相同数位对齐，从低到高逐位相加，如果当前位和>10，则向高位进位。
+
+**代码实现：**
+
+1. 我们定义两个指针`i` 和 `j`分别指向两个字符串的末尾，即最低位。
+2. 同时定义一个变量`add` 维护当前是否有进位，然后从末尾到开头逐位相加即可。
+3. 因为两个字符串长度不一定相同，故我们采取当前下标处于负数的时候自动补零的方法，处理位数不同的问题。![fig1](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/1.png)
+
+```js
+var addStrings = function (num1, num2) {
+  var i = num1.length - 1; j = num2.length - 1;
+  var add = 0;
+  var result = [];
+  while (i >= 0 || j >= 0 || add !== 0) {
+    //补位
+    var x = i >= 0 ? num1[i] - '0' : 0;
+    var y = j >= 0 ? num2[j] - '0' : 0;
+    var temp = x + y + add;
+    result.push(temp % 10);
+    add = Math.floor(temp / 10);
+    i -= 1;
+    j -= 1;
+  }
+  return result.reverse().join('');
+}
+```
+
+#### 大数相乘 leetcode 43
+
+给定两个以字符串形式表示的非负整数 `num1` 和 `num2`，返回 `num1` 和 `num2` 的乘积，它们的乘积也表示为字符串形式。
+
+**代码思路**
+
+![image-20210313180943369](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210313180943369.png)
+
+我们观察竖式相乘，他是将每一列相加的结果。每次相乘，得到的数值不断地加入当前列的结果数组中。 
+
+```js
+var multiply = function (num1, num2) {
+  let len1 = num1.length;
+  let len2 = num2.length;
+  let pos = new Array(len1 + len2).fill(0);
+
+  for (let i = len1 - 1; i >= 0; i--) {
+    const n1 = num1[i];
+    for (let j = len2 - 1; j >= 0; j--) {
+      const n2 = num2[j];
+      const mult = n1 * n2;
+      const sum = pos[i + j + 1] + mult;
+      //末尾相乘不用+=
+      pos[i + j + 1] = sum % 10;
+      //向下取整 注意是+=
+      pos[i + j] += Math.floor(sum / 10);
+    }
+  }
+
+  //除0
+  while (pos[0] == 0) {
+    pos.shift();
+  }
+  return pos.length ? pos.join('') : "0";
+};
+```
+
+![image-20210313180816298](http://ruoruochen-img-bed.oss-cn-beijing.aliyuncs.com/img/image-20210313180816298.png)
+
+#### leetcode 22 括号生成
+
+**解法：回溯法**
+
+就是不停选括号，要么选左括号，要么选右括号。每次最多两个选择，选左括号，或右括号，“选择”会展开出一棵解的空间树。用 DFS 的方式遍历这棵树，找出所有的解，这个过程叫回溯。
+
+- 回溯出口： len == 2*n 加入结果数组 return 继续寻找
+
+- 回溯表达式/约束条件 剪枝。即什么情况下可以选左括号，什么情况下可以选右括号。
+
+  - 1.左括号有剩下，才可用选左
+
+  - 2.右括号剩下数目 < 左括号剩下数目 才可用选右 
+
+```js
+var generateParenthesis = function (n) {
+  const result = []
+  var dns = function (left, right, str) {
+    if (str.length === 2 * n) {
+      result.push(str);
+      return;
+    }
+
+    if (left > 0) {
+      dns(left - 1, right, str + "(");
+    }
+
+    if (right > left) {
+      dns(left, right - 1, str + ")");
+    }
+  }
+  dns(n, n, "");
+  return result;
+};
+```
+
+**更多回溯算法，请看数据结构与算法/回溯法**
